--- a/app/public/css/bossartigo.css
+++ b/app/public/css/bossartigo.css
@@ -74,6 +74,13 @@ body {
     transform: scale(1.1);
 }
 
+.maria {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
 /*                  Cabeçalho Mobile             */
 .mobile-header {
     background: #ffffff;
