--- a/app/views/pages/favoritos.ejs
+++ b/app/views/pages/favoritos.ejs
@@ -37,7 +37,7 @@
                       <% } else { %>
                           <li><a href="/cadastro"><img src="imagens/icone sem cadastro.png" class="maria"></a></li>
                       <% } %>
-                      <li><a href="/favoritos"><img src="imagens/icone coração.png" class="img-tamanho"></a></li>
+                      <li><a href="/favoritos"><img src="imagens/icone coraçao.png" class="img-tamanho"></a></li>
                   </ul>
               </section>
           </section>
