--- a/app/public/css/finalizandocompra.css
+++ b/app/public/css/finalizandocompra.css
@@ -47,7 +47,7 @@
     align-items: center;
   }
   
-  header img {
+  header img.maria {
     width: 50px;
     height: 50px;
     border-radius: 45px;
